force-app/main/default/objects/Issue_Log__c/Issue_Log__c.object-meta.xml
<CustomObject>
    <description>This object is used to report issues found during UAT.</description>
    <label>Issue Log</label>
    <nameField>
        <displayFormat>Issue-{000}</displayFormat>
        <label>Issue Log#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Issues Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>