force-app/main/default/objects/Issue_Log__c/fields/Assessment_Details__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Details__c</fullName>
    <label>Assessment Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>