force-app/main/default/objects/Issue_Log__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <label>Assigned To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ann VanSant</fullName>
            </value>
            <value>
                <fullName>Bruce Fleming</fullName>
            </value>
            <value>
                <fullName>Chris Andrews</fullName>
            </value>
            <value>
                <fullName>Debbie Tarantino</fullName>
            </value>
            <value>
                <fullName>Renee Cue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>