force-app/main/default/objects/Issue_Log__c/fields/Business_Area__c.field-meta.xml
<CustomField>
    <fullName>Business_Area__c</fullName>
    <label>Business Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New License</fullName>
            </value>
            <value>
                <fullName>License Renewal</fullName>
            </value>
            <value>
                <fullName>Add On/Privilege</fullName>
            </value>
            <value>
                <fullName>Premise Update</fullName>
            </value>
            <value>
                <fullName>Transfer License</fullName>
            </value>
            <value>
                <fullName>Label Approval</fullName>
            </value>
            <value>
                <fullName>Additional Locations</fullName>
            </value>
            <value>
                <fullName>Ownership Update</fullName>
            </value>
            <value>
                <fullName>Tax Reporting</fullName>
            </value>
            <value>
                <fullName>Keg Registration</fullName>
            </value>
            <value>
                <fullName>Appeals</fullName>
            </value>
            <value>
                <fullName>Dramshop Changes</fullName>
            </value>
            <value>
                <fullName>Refunds</fullName>
            </value>
            <value>
                <fullName>Registration</fullName>
            </value>
            <value>
                <fullName>Permissions</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>