force-app/main/default/objects/Issue_Log__c/fields/Duplicate_Issue__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Issue__c</fullName>
    <label>Duplicate Issue #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>