force-app/main/default/objects/Issue_Log__c/fields/Jira__c.field-meta.xml
<CustomField>
    <fullName>Jira__c</fullName>
    <label>Jira #</label>
    <length>10</length>
    <type>Text</type>
</CustomField>