force-app/main/default/objects/Issue_Log__c/fields/Script__c.field-meta.xml
<CustomField>
    <fullName>Script__c</fullName>
    <label>Script #</label>
    <length>25</length>
    <type>Text</type>
</CustomField>