force-app/main/default/objects/Issue_Log__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sev 1 - Urgent</fullName>
            </value>
            <value>
                <fullName>Sev 2 - High</fullName>
            </value>
            <value>
                <fullName>Sev 3 - Med</fullName>
            </value>
            <value>
                <fullName>Sev 4 - Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>