force-app/main/default/objects/Issue_Log__c/fields/Sourse__c.field-meta.xml
<CustomField>
    <fullName>Sourse__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UAT1</fullName>
                <default>true</default>
                <label>UAT1</label>
            </value>
            <value>
                <fullName>UAT2</fullName>
            </value>
            <value>
                <fullName>UAT3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>