force-app/main/default/objects/Issue_Log__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bug</fullName>
            </value>
            <value>
                <fullName>Change Request</fullName>
            </value>
            <value>
                <fullName>User Training/Error</fullName>
            </value>
            <value>
                <fullName>Cosmetic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>