force-app/main/default/objects/Issue_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Platform__c</columns>
    <columns>Business_Area__c</columns>
    <columns>Summary__c</columns>
    <columns>Script__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sourse__c</field>
        <operation>equals</operation>
        <value>UAT1</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>New Issues</label>
</ListView>