force-app/main/default/objects/Issue_Log__c/listViews/All_Issues.listView-meta.xml
<ListView>
    <fullName>All_Issues</fullName>
    <booleanFilter>1</booleanFilter>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Jira__c</columns>
    <columns>Platform__c</columns>
    <columns>Business_Area__c</columns>
    <columns>Summary__c</columns>
    <columns>Type__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Duplicate_Issue__c</columns>
    <columns>Release__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sourse__c</field>
        <operation>equals</operation>
        <value>UAT1</value>
    </filters>
    <label>All Issues</label>
</ListView>